--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,6 @@
             <version>8.0.33</version>
         </dependency>
         <dependency>
-            <groupId>org.metawidget.modules</groupId>
-            <artifactId>metawidget-miglayout</artifactId>
-            <version>4.0</version>
-        </dependency>
-        <dependency>
             <groupId>unknown.binary</groupId>
             <artifactId>KControls-2.0</artifactId>
             <version>SNAPSHOT</version>
@@ -32,6 +27,11 @@
             <groupId>com.k33ptoo</groupId>
             <artifactId>KControls</artifactId>
             <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.miglayout</groupId>
+            <artifactId>miglayout</artifactId>
+            <version>4.0</version>
         </dependency>
     </dependencies>
     <properties>
